se agrego instalacion de mbt en comandos mta

--- a/mta.yaml
+++ b/mta.yaml
@@ -75,6 +75,7 @@ modules:
     build-result: dist
     builder: custom
     commands:
+    - npm install -g mbt
     - npm install --production
     - npm run build:cf
     supported-platforms: []
