se agrego instalacion mbt a before all

--- a/mta.yaml
+++ b/mta.yaml
@@ -134,5 +134,6 @@ build-parameters:
   before-all:
   - builder: custom
     commands:
+    - npm install -g mbt
     - npm install --production
     - npx cds build --production
