--- a/mta.yaml
+++ b/mta.yaml
@@ -134,6 +134,7 @@ build-parameters:
   before-all:
   - builder: custom
     commands:
+    - npm install -g @sap/cds-dk
     - npm install -g mbt
     - npm install --production
     - cds build --production
