--- a/mta.yaml
+++ b/mta.yaml
@@ -134,9 +134,10 @@ build-parameters:
   before-all:
   - builder: custom
     commands:
-    - npm clear cache --force
     - npm install -g @sap/cds-dk
     - npm install -g mbt
+    - npm install @sap/ui5-builder-webide-extension
+    - npm install ui5-task-zipper
     - npm install --production
     - cds build --production
     #- npx cds build --production
